even more styling. Still need to fix edit button in notes, and maybe align new note button at the bottom

--- a/app/assets/javascripts/application.css
+++ b/app/assets/javascripts/application.css
@@ -322,6 +322,7 @@ br {
 }
 .submit-convo-button {
   margin: 0px;
+  padding: 10px;
 }
 .message-input {
   font-size: 12px;
@@ -341,6 +342,7 @@ br {
 }
 .message-submit-button {
   text-align: left;
+  padding: 10px;
 }
 .new-note-form {
   display: inline-flex;
@@ -350,4 +352,12 @@ br {
 }
 .new-note-div {
   width: 100%;
+}
+.submit-note-button {
+  padding: 10px;
+}
+.conversations-title {
+  text-align: center;
+  font-weight: 700;
+  font-family: "Lato", sans-serif;
 }
